# muffin-tidy

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  README_CN.md  config.example.toml
.github/workflows/: release.yml
src/: config.rs  dedup.rs  export.rs  logger.rs  main.rs  scanner.rs
src/media/: format.rs  format_test.rs  livephoto.rs  metadata.rs  mod.rs
tests/: integration_test.rs
