[package]
name = "muffin-tidy"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[[bin]]
name = "mtidy"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive", "env"] }
anyhow = "1.0.102"
thiserror = "2.0.18"
nom-exif = "2.7.0"
quick-xml = "0.39.2"
sha2 = "0.10"
hex = "0.4.3"
walkdir = "2.5.0"
chrono = { version = "0.4.44", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt", "json"] }
owo-colors = { version = "4.3.0", features = ["supports-colors"] }
indicatif = "0.17"
rayon = "1.12.0"
dunce = "1.0.5"
filetime = "0.2.27"

[dev-dependencies]
tempfile = "3"
sha2 = "0.10"
hex = "0.4"
walkdir = "2.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
